===============================================================================
Changes for faraday
===============================================================================

TODO:
- fix bounds problem with BFieldInsideGraphic, does not behave correctly when "see inside" checkbox is toggled [351]
- B-field graphics could use some cleanup and redesign [351]

DONE:
4/1/08 - create BFieldInsideGraphic, field grid inside the magnet that moves with the magnet [351]
4/1/08 - create BFieldOutsideGraphic, a specialization of CompassGridGraphic that fills the play area [351]
4/1/08 - generalize CompassGridGraphic so that it can be used for the bar magnet's internal B-field display [351]
4/1/08 - visually inspect all AbstractMagnet.getStrength calls to make sure that having zero magnet strength won't cause problems [435]
4/1/08 - fix divide-by-zero problem in Dipole.getStrengthOutside that occurs when one of the poles is on the point of interest [492]
********* version 1.05.09 (20482)
4/1/08 - change screenshot for magnet-and-compass, turn off field meter [442]
4/1/08 - create screenshots for new faraday sims [442]
4/1/08 - change Earth transparency from 0.65 to 0.75 [443]
4/1/08 - put Earth in top-most layer, in front of magnet, compass and field meter [443]
4/1/08 - change lightbulb min alpha=0.35 and light glow scale=15 throughout [488]
********* version 1.05.08 (20467)
3/31/08 - make Earth image smaller to match Kathy's mockup [443]
3/31/08 - for bar magnet, make compass grid use B-field slightly outside magnet's 2D plan to prevent needles from flipping [424] 
********* version 1.05.07 (20456)
3/31/08 - add "Show Earth" feature to magnet-and-compass and magnets-and-electromagnets flavors [443]
3/31/08 - make faraday into multiple flavors: faraday, magnets-and-compass, magnets-and-electromagnets, generator [442]
********* version 1.05.06 (20441)
3/28/08 - add developer control for setting scaling factor to calibrate how much the lightbulb glows [420]